--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
-    <title>Java Masterclass • iOS</title>
+    <title>Java Masterclass • Web App</title>
 </head>
 <body>
     <script>window.location.href = 'https://www.youtube.com/watch?v=BBJa32lCaaY';</script>
