--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
     <title>Java Masterclass • Web App</title>
+<!--   GTAG   -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B50WGQB1ZB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B50WGQB1ZB');
+</script>
+<!--   GTAG END   -->
 </head>
 <body>
     <script>window.location.href = 'https://www.youtube.com/watch?v=BBJa32lCaaY';</script>
