--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://ibb.co/2qzwxQt">
+    <meta property="og:image" content="https://i.ibb.co/fM3bf5p/Frame-2.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1920">
-    <meta property="og:image:height" content="1080">
+    <meta property="og:image:width" content="720">
+    <meta property="og:image:height" content="480">
     <title>Java Masterclass • Web App</title>
 <!--   GTAG   -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
